# dstparser

./: .buildinfo  .gitignore  README.md  astrotools.py  comparison_test.py  dstParser.py  dst_adapter.py  dst_content.py  dst_parser.py  dst_parsers.py  dst_reader.py  genindex.html  index.html  launch_slurm.py  main_script.py  objects.inv  plots.py  process_files.ipynb  process_files.py  process_files1.ipynb  pyproject.toml  read_data.py  sdanalysis_env.sh  search.html  searchindex.js  setup.cfg  tasd_clf.py  test_parser.py  utils.py  xmax_reader.ipynb  xmax_reader.py
.github/workflows/: docs.yml
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: modules.rst
docs/source/: conf.py  index.rst
docs_md/: dst_fields.md  sd_analysis.md
event_display_dst/: event_display.py  waveforms_viewer.ipynb
examples/: 1event_perdst.py  config.yaml  config_dst.py  config_ta_test.yaml  config_tax4_test.yaml  parse_3_dst.py  parse_all_dst.py  run_script.py  write_mass_h5.py
merging/: io.py  main_job.py  worker_job.py
plots/: launch_slurm.py  tile_movie.py  trace_visualization.ipynb  visualize_traces.py
slurm/: launch_slurm.py  process_files.py
slurm_run/: main_job.py  run_dst_conversion.py  worker_job.py
src/dstparser/: __init__.py  dst_adapter.py  dst_adapter_old.py  dst_adapter_tax4.py  dst_adapter_vlen.py  dst_parsers.py  dst_reader.py  (+11 more)
tests/: check_dst_list.py  check_h5.ipynb  check_parser.py  conftest.py  dst_to_h5.md  dst_to_h5_dst_list.md  dst_to_ht_dst_list.md  parsed_data_description.md  test_dst_list.py  test_parser.py  test_parser_vlen.py
(+12 files in other folders)
