[metadata]
name = dstparser
version = 0.1.0
author = Kozo Fujisue, Anton Prosekin
author_email = ayprosekin@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TA-DNN/dstparser
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy

[options.packages.find]
where = src